Refactor fix platform example app automation

--- a/src/PlatformExampleAppWeb/apps/playground-text-snippet/src/styles/components/mat-spinner.scss
+++ b/src/PlatformExampleAppWeb/apps/playground-text-snippet/src/styles/components/mat-spinner.scss
@@ -1,7 +1,7 @@
 @import 'variables';
 @import 'mixins';
 
-.platform-mat-spinner {
+.platform-mat-mdc-spinner {
   display: inline-flex;
   flex-direction: column;
   flex-shrink: 0;
