Refactor and enhancement

--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Account/Logout.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Account/Logout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model LogoutViewModel
+@model PlatformExampleApp.Ids.Quickstart.Account.LogoutViewModel
 
 <div class="logout-page">
     <div class="lead">
