--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Device/UserCodeConfirmation.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Device/UserCodeConfirmation.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model DeviceAuthorizationViewModel
+@model PlatformExampleApp.Ids.Quickstart.Device.DeviceAuthorizationViewModel
 
 <div class="page-device-confirmation">
     <div class="lead">
