--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Grants/Index.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Grants/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@model GrantsViewModel
+@model PlatformExampleApp.Ids.Quickstart.Grants.GrantsViewModel
 
 <div class="grants-page">
     <div class="lead">
