--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Account/LoggedOut.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Account/LoggedOut.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoggedOutViewModel
+﻿@model PlatformExampleApp.Ids.Quickstart.Account.LoggedOutViewModel
 
 @{
     // set this so the layout rendering sees an anonymous user
