--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Account/Login.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model LoginViewModel
+@model PlatformExampleApp.Ids.Quickstart.Account.LoginViewModel
 
 <div class="login-page">
     <div class="lead">
