--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Consent/Index.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Consent/Index.cshtml
@@ -1,5 +1,5 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model ConsentViewModel
+@model PlatformExampleApp.Ids.Quickstart.Consent.ConsentViewModel
 
 <div class="page-consent">
     <div class="lead">
