--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Diagnostics/Index.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Diagnostics/Index.cshtml
@@ -1,4 +1,4 @@
-@model DiagnosticsViewModel
+@model PlatformExampleApp.Ids.Quickstart.Diagnostics.DiagnosticsViewModel
 
 <div class="diagnostics-page">
     <div class="lead">
