--- a/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Shared/Redirect.cshtml
+++ b/src/PlatformExampleApp/PlatformExampleApp.Ids/Views/Shared/Redirect.cshtml
@@ -1,4 +1,4 @@
-@model RedirectViewModel
+@model PlatformExampleApp.Ids.Quickstart.Account.RedirectViewModel
 
 <div class="redirect-page">
     <div class="lead">
