--- a/src/PlatformExampleAppWeb/apps/playground-text-snippet/src/styles/themes/default-theme.scss
+++ b/src/PlatformExampleAppWeb/apps/playground-text-snippet/src/styles/themes/default-theme.scss
@@ -1,21 +1,19 @@
-// References: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 
-@import 'variables';
-
-$my-primary: mat.define-palette(mat.$indigo-palette);
-$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-$my-theme: mat.define-light-theme(
-  (
-    color: (
-      primary: $my-primary,
-      accent: $my-accent
-    )
-  )
-);
-
-// Emit theme-dependent styles for common features used across multiple components.
-@include mat.core-theme($my-theme);
-
-@include mat.all-component-themes($my-theme);
+// Apply the custom theme globally
+html {
+    @include mat.theme(
+        (
+            color: (
+                primary: mat.$blue-palette,
+                // Primary color palette (use a valid color palette like $blue-palette)
+                tertiary: mat.$violet-palette,
+                // Tertiary color palette (use another valid color palette)
+                theme-type: light // Light theme type
+            ),
+            typography: Roboto,
+            // Use Roboto typography (or replace with your choice)
+            density: 0 // Adjust the density as per your needs (0 for default)
+        )
+    );
+}
